noinst_LTLIBRARIES = libXi.la

AM_CFLAGS = $(DIX_CFLAGS)

libXi_la_SOURCES =	\
	allowev.c \
	allowev.h \
        chdevcur.c \
        chdevcur.h \
	chgdctl.c \
	chgdctl.h \
	chgfctl.c \
	chgfctl.h \
	chgkbd.c \
	chgkbd.h \
	chgkmap.c \
	chgkmap.h \
	chgprop.c \
	chgprop.h \
	chgptr.c \
	chgptr.h \
	chpkpair.c \
	chpkpair.h \
	chaccess.c \
	chaccess.h \
	closedev.c \
	closedev.h \
	devbell.c \
	devbell.h \
	exevents.c \
	exglobals.h \
	extinit.c \
	getbmap.c \
	getbmap.h \
	getdctl.c \
	getdctl.h \
	getfctl.c \
	getfctl.h \
	getfocus.c \
	getfocus.h \
	getkmap.c \
	getkmap.h \
	getmmap.c \
	getmmap.h \
	getprop.c \
	getprop.h \
	getselev.c \
	getselev.h \
	getvers.c \
	getvers.h \
        grabacc.c \
        grabacc.h \
	grabdev.c \
	grabdev.h \
	grabdevb.c \
	grabdevb.h \
	grabdevk.c \
	grabdevk.h \
	gtmotion.c \
	gtmotion.h \
	listdev.c \
	listdev.h \
	opendev.c \
	opendev.h \
	querydp.c \
	querydp.h \
	queryst.c \
	queryst.h \
	qryacces.c \
	qryacces.h \
	regpair.c \
	regpair.h \
	selectev.c \
	selectev.h \
	sendexev.c \
	sendexev.h \
	setbmap.c \
	setbmap.h \
	setcptr.c \
	setcptr.h \
	setdval.c \
	setdval.h \
	setfocus.c \
	setfocus.h \
	setmmap.c \
	setmmap.h \
	setmode.c \
	setmode.h \
	ungrdev.c \
	ungrdev.h \
	ungrdevb.c \
	ungrdevb.h \
	ungrdevk.c \
	ungrdevk.h \
	warpdevp.c \
	warpdevp.h 

EXTRA_DIST = stubs.c
