EXTRA_DIST = \
	ilbm.h \
	ilbmbitblt.c \
	ilbmblt.c \
	ilbmbres.c \
	ilbmbresd.c \
	ilbmbstore.c \
	ilbmclip.c \
	ilbmcmap.c \
	ilbmfillarc.c \
	ilbmfillrct.c \
	ilbmfillsp.c \
	ilbmfont.c \
	ilbmgc.c \
	ilbmgetsp.c \
	ilbmhrzvert.c \
	ilbmimage.c \
	ilbmimggblt.c \
	ilbmline.c \
	ilbmmisc.c \
	ilbmpixmap.c \
	ilbmply1rct.c \
	ilbmplygblt.c \
	ilbmpntarea.c \
	ilbmpntwin.c \
	ilbmpolypnt.c \
	ilbmpushpxl.c \
	ilbmscrinit.c \
	ilbmsetsp.c \
	ilbmtegblt.c \
	ilbmtile.c \
	ilbmwindow.c \
	ilbmzerarc.c \
	README
