EXTRA_DIST = \
	ipl.h \
	iplallpriv.c \
	iplbitblt.c \
	iplblt.c \
	iplbres.c \
	iplbresd.c \
	iplbstore.c \
	iplcmap.c \
	iplfillarc.c \
	iplfillrct.c \
	iplfillsp.c \
	iplgc.c \
	iplgetsp.c \
	iplhrzvert.c \
	iplimage.c \
	iplline.c \
	iplmap.h \
	iplmergerop.h \
	iplmskbits.c \
	iplmskbits.h \
	iplpack.c \
	iplpack.h \
	iplpixmap.c \
	iplply1rct.c \
	iplpntwin.c \
	iplpolypnt.c \
	iplrrop.c \
	iplrrop.h \
	iplscrinit.c \
	iplsetsp.c \
	iplsolid.c \
	ipltegblt.c \
	ipltile32.c \
	ipltileodd.c \
	iplwindow.c
