noinst_LTLIBRARIES = liblbx.la

AM_CFLAGS = $(DIX_CFLAGS) @LOADER_DEFINES@

liblbx_la_SOURCES =				\
	lbxcmap.c				\
	lbxdata.h				\
	lbxdix.c				\
	lbxexts.c				\
	lbxgfx.c				\
	lbxmain.c				\
	lbxopts.c				\
	lbxprop.c				\
	lbxserve.h				\
	lbxsquish.c				\
	lbxsrvopts.h				\
	lbxswap.c				\
	lbxtables.c				\
	lbxtags.c				\
	lbxtags.h				\
	lbxzerorep.c
