noinst_LTLIBRARIES = libmpx.la

AM_CFLAGS = $(DIX_CFLAGS)

libmpx_la_SOURCES =	\
	extinit.c \
        getvers.c \
	getvers.h \
        listdev.c \
        listdev.h \
        selectev.c \
        selectev.h \
        mpxglobals.h \
	getevbase.c \
	getevbase.h \
        queryptr.h \
        queryptr.c 

